add validater; handle some exception
